--- a/Liusse/App.xaml
+++ b/Liusse/App.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Liusse"
              StartupUri="View\MainWindow.xaml">
+            <!-- StartupUri="DesignDocument.xaml"> -->
+            <!-- StartupUri="View\MainWindow.xaml"> -->
     <Application.Resources>
          
     </Application.Resources>
