--- a/Liusse/View/MainWindow.xaml
+++ b/Liusse/View/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Liusse"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Liusse" MinHeight="350" MinWidth="250"
+        Height="500" Width="350">
     <Grid>
 
     </Grid>
