--- a/Liusse/App.xaml
+++ b/Liusse/App.xaml
@@ -3,12 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Liusse"
              StartupUri="View\MainWindow.xaml">
-            <!-- StartupUri="DesignDocument.xaml"> -->
-            <!-- StartupUri="View\MainWindow.xaml"> -->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles\LiusseTemplate.xaml" />
+                <ResourceDictionary Source="/Resources/Symbols.xaml"/>
+                <ResourceDictionary Source="/Resources/Elements.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
