--- a/Liusse/Templates/StandardInput.xaml
+++ b/Liusse/Templates/StandardInput.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Liusse.Templates.StandartInput"
+﻿<UserControl x:Class="Liusse.Templates.StandardInput"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
