--- a/Liusse/Templates/StandardOutput.xaml
+++ b/Liusse/Templates/StandardOutput.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Liusse.Templates.StandartOutput"
+﻿<UserControl x:Class="Liusse.Templates.StandardOutput"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
