--- a/Liusse/App.xaml
+++ b/Liusse/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Symbols.xaml"/>
                 <ResourceDictionary Source="/Resources/Elements.xaml"/>
+                <ResourceDictionary Source="/Resources/StandardTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
