--- a/Liusse/Resources/Symbols.xaml
+++ b/Liusse/Resources/Symbols.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Liusse.Resources">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <!--#region Плюс/Минус -->
     <PathGeometry x:Key="PlusMinusSymbol" Figures="
@@ -32,3 +31,4 @@
     <!--#endregion-->
     
 </ResourceDictionary>
+    
