--- a/Liusse/Templates/StandardOutput.xaml
+++ b/Liusse/Templates/StandardOutput.xaml
@@ -6,9 +6,7 @@
              xmlns:local="clr-namespace:Liusse.Templates"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
-    <!--#region Поле выходных значений-->
-    <!--<Grid>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="7*"/>
@@ -16,23 +14,15 @@
 
         <Viewbox Grid.Row="1" HorizontalAlignment="Right"
                      VerticalAlignment="Top">
-            <TextBox Style="{StaticResource OutputTextBox}"
-                         SelectionBrush="{DynamicResource СomplementaryColor}" 
-                         Foreground="{DynamicResource Text1Color}" 
-                         Margin="0,-2,0,-2" TextWrapping="Wrap"
-                         MaxWidth="200" Text="244 200"/>
+            <TextBox Margin="0,-1,0,-2" MaxWidth="200" TextWrapping="Wrap"
+                     TextAlignment="Right" IsReadOnly="True"
+                     Text="244 200"/>
         </Viewbox>
-
         <Viewbox Grid.Row="0" HorizontalAlignment="Right"
                      VerticalAlignment="Center">
-            <TextBox Style="{StaticResource OutputTextBox}" 
-                         SelectionBrush="{DynamicResource СomplementaryColor}" 
-                         Foreground="{DynamicResource Text2Color}" 
-                         Margin="0,-2,0,0" TextWrapping="Wrap" 
-                         MaxWidth="200" Text="5 + 5 * 88 / 2 * 555="/>
+            <TextBox Margin="0,-2,0,0" MaxWidth="200" TextWrapping="Wrap" 
+                     TextAlignment="Right" IsReadOnly="True" Opacity="0.8" 
+                     Text="5 + 5 * 88 / 2 * 555="/>
         </Viewbox>
-    </Grid>-->
-    <!--#endregion-->
-    
-
+    </Grid>
 </UserControl>
