--- a/Liusse/Templates/StandardInput.xaml
+++ b/Liusse/Templates/StandardInput.xaml
@@ -20,40 +20,53 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="C"/>
+        <Button Grid.Row="0" Grid.Column="0" Content="C"
+                CommandParameter="C"/>
         <Button Grid.Row="0" Grid.Column="1" Content="( )"
-                    Padding="0,-1,0,5"/>
-        <Button Grid.Row="0" Grid.Column="2" Padding="10,0,10,5">
+                Padding="0,-1,0,5" CommandParameter="()"/>
+        <Button Grid.Row="0" Grid.Column="2" Padding="10,0,10,5"
+                CommandParameter="Backspace">
             <Path Data="{StaticResource BackspaceSymbol}"/>
         </Button>
         <Button Grid.Row="0" Grid.Column="3" Content="÷"
-                    Padding="0,-10,0,0"/>
+                Padding="0,-10,0,0" CommandParameter="÷"/>
 
-        <Button Grid.Row="1" Grid.Column="0" Content="7"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="8"/>
-        <Button Grid.Row="1" Grid.Column="2" Content="9"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="7"
+                CommandParameter="7"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="8"
+                CommandParameter="8"/>
+        <Button Grid.Row="1" Grid.Column="2" Content="9"
+                CommandParameter="9"/>
         <Button Grid.Row="1" Grid.Column="3" Content="×"
-                    Padding="0,-10,0,0"/>
+                Padding="0,-10,0,0" CommandParameter="×"/>
 
-        <Button Grid.Row="2" Grid.Column="0" Content="4"/>
-        <Button Grid.Row="2" Grid.Column="1" Content="5"/>
-        <Button Grid.Row="2" Grid.Column="2" Content="6"/>
+        <Button Grid.Row="2" Grid.Column="0" Content="4"
+                CommandParameter="4"/>
+        <Button Grid.Row="2" Grid.Column="1" Content="5"
+                CommandParameter="5"/>
+        <Button Grid.Row="2" Grid.Column="2" Content="6"
+                CommandParameter="6"/>
         <Button Grid.Row="2" Grid.Column="3" Content="-"
-                    Padding="0,-10,0,0"/>
+                Padding="0,-10,0,0" CommandParameter="-"/>
 
-        <Button Grid.Row="3" Grid.Column="0" Content="1"/>
-        <Button Grid.Row="3" Grid.Column="1" Content="2"/>
-        <Button Grid.Row="3" Grid.Column="2" Content="3"/>
+        <Button Grid.Row="3" Grid.Column="0" Content="1"
+                CommandParameter="1"/>
+        <Button Grid.Row="3" Grid.Column="1" Content="2"
+                CommandParameter="2"/>
+        <Button Grid.Row="3" Grid.Column="2" Content="3"
+                CommandParameter="3"/>
         <Button Grid.Row="3" Grid.Column="3" Content="+"
-                    Padding="0,-10,0,0"/>
+                Padding="0,-10,0,0" CommandParameter="+"/>
 
-        <Button Grid.Row="4" Grid.Column="0" Padding="8">
+        <Button Grid.Row="4" Grid.Column="0" Padding="8" 
+                CommandParameter="±">
             <Path Data="{StaticResource PlusMinusSymbol}"/>
         </Button>
-        <Button Grid.Row="4" Grid.Column="1" Content="0"/>
+        <Button Grid.Row="4" Grid.Column="1" Content="0"
+                CommandParameter="0"/>
         <Button x:Name="SeparatorBtn" Grid.Row="4" Grid.Column="2" 
-                    Padding="0,-10,0,10" Content=","/>
+                Padding="0,-10,0,10" Content="," CommandParameter=","/>
         <Button Grid.Row="4" Grid.Column="3" Content="="
-                    Padding="0,-8,0,0"/>
+                Padding="0,-8,0,0" CommandParameter="="/>
     </Grid>
 </UserControl>
