--- a/Liusse/View/MainWindow.xaml
+++ b/Liusse/View/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Liusse.View.MainWindow"
+﻿<Window x:Class="Liusse.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Liusse.View"
+        xmlns:local="clr-namespace:Liusse"
         xmlns:Templ="clr-namespace:Liusse.Templates"
         mc:Ignorable="d"
         Title="Liusse" MinHeight="350" MinWidth="250"
@@ -17,9 +17,11 @@
                     Value="{DynamicResource SecondaryTextColor}"/>
             <Setter Property="SelectionBrush" 
                     Value="{DynamicResource PrimaryTextColor}"/>
+            <Setter Property="Text" Value="{Binding Expression}"/>
         </Style>
         <Style TargetType="Button">
             <Setter Property="Template" Value="{StaticResource InputButton}"/>
+            <Setter Property="Command" Value="{Binding InputCommand}"/>
             <Setter Property="Margin" Value="1"/>
             <Setter Property="Background" 
                     Value="{DynamicResource ComplementaryColor}"/>
@@ -43,7 +45,8 @@
             <RowDefinition Height="320*"/>
         </Grid.RowDefinitions>
 
-        <Templ:StandardOutput Grid.Row="1" Margin="5"/>
+        <Templ:StandardOutput Grid.Row="1" Margin="5" 
+                              DataContext="{Binding Parser}"/>
 
         <Templ:StandardInput Grid.Row="2" Margin="2"/>
 
