--- a/Liusse/View/MainWindow.xaml
+++ b/Liusse/View/MainWindow.xaml
@@ -20,6 +20,7 @@
                     Value="{DynamicResource PrimaryTextColor}"/>
             <Setter Property="Text" Value="{Binding Expression}"/>
         </Style>
+        
         <Style TargetType="Button">
             <Setter Property="Template" Value="{StaticResource InputButton}"/>
             <Setter Property="Command" Value="{Binding InputCommand}"/>
@@ -31,17 +32,31 @@
             <Setter Property="Foreground" 
                     Value="{DynamicResource PrimaryTextColor}"/>
         </Style>
+        
         <Style TargetType="Path">
             <Setter Property="Stroke" 
                     Value="{DynamicResource PrimaryTextColor}"/>
             <Setter Property="Fill" 
                     Value="{DynamicResource PrimaryTextColor}"/>
         </Style>
+        
         <Style TargetType="Button" x:Key="PanelButtonStyle">
             <Setter Property="Template" Value="{StaticResource PanelButton}"/>
             <Setter Property="Width" Value="35"/>
             <Setter Property="Height" Value="35"/>
             <Setter Property="Padding" Value="5"/>
+            <Setter Property="Background" Value="{StaticResource MainColor}"/>
+        </Style>
+        
+        <Style TargetType="Border" x:Key="Panel">
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Padding" Value="0,35,0,0"/>
+            <Setter Property="Background" 
+                    Value="{StaticResource MainColor}"/>
+            <Setter Property="BorderBrush" 
+                    Value="{StaticResource SecondaryTextColor}"/>
+            <Setter Property="Visibility" Value="Collapsed"/>
         </Style>
     </Window.Resources>
     <!--#endregion-->
@@ -52,24 +67,44 @@
             <RowDefinition Height="100*"/>
             <RowDefinition Height="320*"/>
         </Grid.RowDefinitions>
-        
+
         <!--#region Кнопки панелей-->
         <DockPanel LastChildFill="False" Panel.ZIndex="2">
             <Button Style="{StaticResource PanelButtonStyle}"
-                    DockPanel.Dock="Left">
+                    DockPanel.Dock="Left" Click="MenuButtonClick">
                 <Path Data="{StaticResource MenuSymbol}"/>
             </Button>
             <Button Style="{StaticResource PanelButtonStyle}" 
-                    DockPanel.Dock="Right">
+                    DockPanel.Dock="Right" Click="JournalButtonClick">
                 <Path Data="{StaticResource HistorySymbol}"/>
             </Button>
         </DockPanel>
         <!--#endregion-->
 
+        <!--#region Основная область-->
         <Templ:StandardOutput Grid.Row="1" Margin="5" 
                               DataContext="{Binding Parser}"/>
 
         <Templ:StandardInput Grid.Row="2" Margin="2"/>
+        <!--#endregion-->
 
+        <!--#region Выезжающие панели-->
+        <Border x:Name="BlackArea" Grid.RowSpan="3" Visibility="Collapsed" 
+                Opacity="0" MouseLeftButtonDown="BlackAreaClick" 
+                Background="Black">
+        </Border>
+
+        <Border x:Name="MenuPanel" Grid.RowSpan="3" Margin="-200,0,0,0"
+                Style="{StaticResource Panel}" HorizontalAlignment="Left"
+                BorderThickness="0,0,1,0">
+            <Button Width="50" Height="50"/>
+        </Border>
+
+        <Border x:Name="JournalPanel" Grid.RowSpan="3" Margin="0,0,-200,0"
+                Style="{StaticResource Panel}" HorizontalAlignment="Right"
+                BorderThickness="1,0,0,0">
+            <Button Width="50" Height="50"/>
+        </Border>
+        <!--#endregion-->
     </Grid>
 </Window>
