--- a/Liusse/Templates/JournalPanel.xaml
+++ b/Liusse/Templates/JournalPanel.xaml
@@ -44,7 +44,8 @@
         <!--#region Кнопка очистить журнал-->
         <Button Grid.Row="1" Template="{StaticResource PanelButton}"
                 HorizontalAlignment="Right" Width="35" Height="35"
-                Padding="2,5,4,5" Background="{StaticResource MainColor}">
+                Padding="2,5,4,5" Background="{StaticResource MainColor}"
+                Command="{Binding ClearJournalCommand}">
             <Path SnapsToDevicePixels="True" 
                   Data="{StaticResource TrashCanSymbol}"/>
         </Button>
