--- a/Liusse/Resources/Symbols.xaml
+++ b/Liusse/Resources/Symbols.xaml
@@ -3,29 +3,27 @@
     
     <!--#region Плюс/Минус -->
     <PathGeometry x:Key="PlusMinusSymbol" Figures="
-            M 0,6 L 6,6  M 3 3 L 3 9
-            M 9 2 L 4 14
-            M 7 11 L 11 11"/>
+                  M 0,6 L 6,6  M 3 3 L 3 9
+                  M 9 2 L 4 14
+                  M 7 11 L 11 11"/>
     <!--#endregion-->
     
     <!--#region Backspace-->
     <GeometryGroup x:Key="BackspaceSymbol">
         <PathGeometry Figures="
-                m62.933 53.333h-44.8c-.315 0-.613-.139-.816-.38l-17.066
-                -20.266c-.334-.397-.334-.977 0-1.374l17.067-20.267c.203
-                -.241.501-.38.816-.38h44.8c.589 0 1.067.478 1.067 
-                1.067v40.533c-.001.589-.479 1.067-1.068 1.067zm-44.304
-                -2.133h43.237v-38.4h-43.237l-16.168 19.2z"/>
+            m62.933 53.333h-44.8c-.315 0-.613-.139-.816-.38l-17.066-20.266c
+            -.334-.397-.334-.977 0-1.374l17.067-20.267c.203-.241.501-.38.816
+            -.38h44.8c.589 0 1.067.478 1.067 1.067v40.533c-.001.589-.479 
+            1.067-1.068 1.067zm-44.304-2.133h43.237v-38.4h-43.237l-16.168 
+            19.2z"/>
         <PathGeometry Figures="
-                m46.933 41.6c-.273 0-.546-.105-.754-.313l-17.066-17.066c
-                -.417-.417-.417-1.091 0-1.508.416-.417 1.092-.417 1.508 
-                0l17.067 17.067c.417.417.417 1.091 0 1.508-.209.207
-                -.482.312-.755.312z"/>
+            m46.933 41.6c-.273 0-.546-.105-.754-.313l-17.066-17.066c-.417
+            -.417-.417-1.091 0-1.508.416-.417 1.092-.417 1.508 0l17.067 
+            17.067c.417.417.417 1.091 0 1.508-.209.207-.482.312-.755.312z"/>
         <PathGeometry Figures="
-                m29.867 41.6c-.273 0-.546-.105-.754-.313-.417-.417-.417
-                -1.091 0-1.508l17.067-17.067c.416-.417 1.092-.417 1.508 
-                0 .417.417.417 1.091 0 1.508l-17.067 17.067c-.208.208
-                -.481.313-.754.313z"/>
+            m29.867 41.6c-.273 0-.546-.105-.754-.313-.417-.417-.417-1.091 
+            0-1.508l17.067-17.067c.416-.417 1.092-.417 1.508 0 .417.417.417 
+            1.091 0 1.508l-17.067 17.067c-.208.208-.481.313-.754.313z"/>
         <PathGeometry Figures="m40.0 32.4c-.0 0.-5-0-.50-1"/>
     </GeometryGroup>
     <!--#endregion-->
@@ -39,21 +37,21 @@
 
     <!--#region История-->
     <GeometryGroup x:Key="HistorySymbol">
-        <PathGeometry Figures="m275.531 172.228-.05 120.493c0 4.575 
-                      1.816 8.948 5.046 12.177l86.198 86.181 24.354-24.354
-                      -81.153-81.136.05-113.361z"/>
-        <PathGeometry Figures="m310.011 34.445c-121.23 0-221.563 90.033
-                      -238.367 206.674h-71.644l86.114 86.114 86.114-86.114h
-                      -65.78c16.477-97.589 101.355-172.228 203.563-172.228 
-                      113.966 0 206.674 92.707 206.674 206.674s-92.707 
-                      206.674-206.674 206.674c-64.064 0-123.469-28.996
-                      -162.978-79.555l-27.146 21.192c46.084 58.968 115.379 
-                      92.808 190.124 92.808 132.955 0 241.119-108.181 
-                      241.119 -241.119s-108.164-241.119-241.119-241.12z"/>
+        <PathGeometry Figures="
+            m275.531 172.228-.05 120.493c0 4.575 1.816 8.948 5.046 12.177
+            l86.198 86.181 24.354-24.354-81.153-81.136.05-113.361z"/>
+        <PathGeometry Figures="
+            m310.011 34.445c-121.23 0-221.563 90.033-238.367 206.674h
+            -71.644l86.114 86.114 86.114-86.114h-65.78c16.477-97.589 101.355
+            -172.228 203.563-172.228 113.966 0 206.674 92.707 206.674 
+            206.674s-92.707 206.674-206.674 206.674c-64.064 0-123.469-28.996
+            -162.978-79.555l-27.146 21.192c46.084 58.968 115.379 92.808 
+            190.124 92.808 132.955 0 241.119-108.181 241.119 -241.119s
+            -108.164-241.119-241.119-241.12z"/>
     </GeometryGroup>
     <!--#endregion-->
 
-    <!--#region Мусорка-->
+    <!--#region Мусорная урна-->
     <PathGeometry x:Key="TrashCanSymbol" Figures="
         M648.587,99.881H509.156C500.276,43.486,452.761,0,394.444,0S287.696,
         43.486,279.731,99.881H142.315 c-26.733,0-48.43,21.789-48.43,48.43
