--- a/Liusse/View/MainWindow.xaml
+++ b/Liusse/View/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="Liusse" MinHeight="350" MinWidth="250"
         Height="500" Width="350" Background="{DynamicResource MainColor}"
-        KeyDown="KeyInput">
+        KeyDown="KeyInput" Closing="Window_Closing" Closed="Window_Closed">
 
     <!--#region Подключение всех шаблонов и стилей к окну-->
     <Window.Resources>
